news用戶登入字體修改_用戶登入連結改正確

--- a/owner_pv_form.html
+++ b/owner_pv_form.html
@@ -70,7 +70,7 @@
             </li>
             <li class="nav_link"><a href="./News.html">最新公告</a></li>
             <li class="nav_link nav_member">
-                <a href="./../loginform.html" class="nav_membe_btn"><img src="./img/nav_footer/unknow_user.png"
+                <a href="./loginform.html" class="nav_membe_btn"><img src="./img/nav_footer/unknow_user.png"
                     class="nav_userImg"><p class="nav_username" style="margin:0px;">用戶登入</p></a>
               </li>
               <li class="nav_link"><a href="#">下載APP</a></li>
