--- a/loginform.html
+++ b/loginform.html
@@ -72,8 +72,8 @@
             </li>
             <li class="nav_link"><a href="./News.html">最新公告</a></li>
             <li class="nav_link nav_member">
-                <a href="./../loginform.html" class="nav_membe_btn"><img src="./img/nav_footer/unknow_user.png"
-                    class="nav_userImg"><p class="nav_username" style="margin:0px;">用戶登入</p></a>
+                <a href="./loginform.html" class="nav_membe_btn"><img src="./img/nav_footer/unknow_user.png"
+                    class="nav_userImg"><p class="nav_username" style="margin:0px;font-size: 18px;">用戶登入</p></a>
               </li>
               <li class="nav_link"><a href="#">下載APP</a></li>
               <li class="nav_link"><a href="./index/index.html" onclick="logout()">登出
