--- a/index/index.html
+++ b/index/index.html
@@ -20,6 +20,7 @@
   <script src="./js/header_footer.js"> </script>
   <!-- 要再增加link的話,請在下方繼續加 -->
   <link rel="stylesheet" href="./css/index1.css">
+  <link rel="shortcut icon" href="./img/nav_footer/web_logo.png" type="image/x-icon">
 
 </head>
 
