--- a/index/indextask.html
+++ b/index/indextask.html
@@ -179,7 +179,7 @@
       </div>
 
 
-      <div class="taskcarda" >
+      <div class="taskcarda"onclick="location.href='../owner_case_detail_wu.html';" >
         <h2>開幕活動企劃<span class="small2">通過實名認證</span></h2>
         <p>發案方: 伍小姐 台北市大同區<br> 5.0 ★</p>
         <button onclick="location.href='../owner_case_detail_wu.html';">查看工作</button>
