--- a/index/indextask2.html
+++ b/index/indextask2.html
@@ -176,7 +176,7 @@
           </div>  
 
 
-          <div class="taskcarda">
+          <div class="taskcarda" onclick="location.href='../expert_detail_lin.html';">
            <h2>類型:補教<span class="small2">通過實名認證</span></h2>
             <p>接案者: 林小姐  台北市內湖區<br> 5.0 ★</p>
             <button class="btn-view" onclick="location.href='../expert_detail_lin.html';">接案者檔案</button>
@@ -191,7 +191,7 @@
             </div> 
   
   
-            <div class="taskcarda">
+            <div class="taskcarda" onclick="location.href='../expert_detail_chen.html';">
              <h2>類型:補教<span class="small2">通過實名認證</span></h2>
               <p>接案者: 陳小姐  台北市文山區<br> 5.0 ★</p>
               <button class="btn-view" onclick="location.href='../expert_detail_chen.html';">接案者檔案</button>
