--- a/index/index.html
+++ b/index/index.html
@@ -168,7 +168,7 @@
   <!-- 下方BANNER1 -->
   <div class="banner3">
     <h1>在這裡有<span class="redt">32,125</span>個需求 <br> 卻不知道用在哪?</h1>
-    <button id="banner3Button" onclick="location.href='./indextask.html';">開始接案</button>
+    <button id="banner3Button" onclick="location.href='./indextask.html';">我要接案</button>
   </div>
 
   <div class="banner4">
