--- a/owner_S1_form.html
+++ b/owner_S1_form.html
@@ -168,12 +168,12 @@
     <ul class="chose">
       <li class="person">
         <input type="radio" class="person" name="drone" value="person" checked />
-        <label>個人接案 (可直接跳至下一頁)</label>
+        <label>個人發案 (可直接跳至下一頁)</label>
       </li>
 
       <li class="company">
         <input type="radio" class="company" name="drone" value="company" />
-        <label for="company">公司行號接案(請續填下列表單)</label>
+        <label for="company">公司行號發案(請續填下列表單)</label>
       </li>
     </ul>
 
