更改nav連結+改註冊送出localstorage的程式位置

--- a/applicants.html
+++ b/applicants.html
@@ -46,26 +46,27 @@
 
         </div>
         <div class="nav_bottom">
-            <div class="nav_logo"><img src="./img/nav_footer/nav_logo.png" alt="" onclick="location.href='./index/index.html';"></div>
+            <div class="nav_logo"><img src="./img/nav_footer/nav_logo.png" alt=""
+                    onclick="location.href='./index/index.html';"></div>
             <i class="fa-solid fa-bars nav_hamburger"></i>
-            <ul class="nav_item">   
+            <ul class="nav_item">
                 <i class="fa-solid fa-chevron-left nav_turnback"></i>
                 <li class="nav_link"><a href="./index.html">首頁</a></li>
                 <li class="nav_link ">工作類別<i class="fa-solid fa-chevron-down nav_fa-chevron-down"></i>
                     <div class="nav_workKind_list">
                         <ul class="nav_workKind">
-                            <li><a href="">人力</a></li>
-                            <li><a href="">餐飲</a></li>
-                            <li><a href="">門市</a></li>
-                            <li><a href="">辦公</a></li>
-                            <li><a href="">補救</a></li>
+                            <li><a href="./index/indextask.html">人力</a></li>
+                            <li><a href="./index/indextask.html">餐飲</a></li>
+                            <li><a href="./index/indextask.html">門市</a></li>
+                            <li><a href="./index/indextask.html">辦公</a></li>
+                            <li><a href="./index/indextask.html">補救</a></li>
                         </ul>
                         <ul class="nav_workKind">
-                            <li><a href="">活動</a></li>
-                            <li><a href="">銷售</a></li>
-                            <li><a href="">市調</a></li>
-                            <li><a href="">設計</a></li>
-                            <li><a href="">其他</a></li>
+                            <li><a href="./index/indextask.html">活動</a></li>
+                            <li><a href="./index/indextask.html">銷售</a></li>
+                            <li><a href="./index/indextask.html">市調</a></li>
+                            <li><a href="./index/indextask.html">設計</a></li>
+                            <li><a href="./index/indextask.html">其他</a></li>
                         </ul>
                     </div>
 
@@ -73,10 +74,12 @@
                 <li class="nav_link"><a href="./News.html">最新公告</a></li>
                 <li class="nav_link nav_member">
                     <a href="./loginform.html" class="nav_membe_btn"><img src="./img/nav_footer/unknow_user.png"
-                        class="nav_userImg"><p class="nav_username" style="margin:0px;">用戶登入</p></a>
-                  </li>
-                  <li class="nav_link"><a href="#">下載APP</a></li>
-                  <li class="nav_link"><a href="./index/index.html" onclick="logout()">登出
+                            class="nav_userImg">
+                        <p class="nav_username" style="margin:0px;">用戶登入</p>
+                    </a>
+                </li>
+                <li class="nav_link"><a href="#">下載APP</a></li>
+                <li class="nav_link"><a href="./index/index.html" onclick="logout()">登出
                     </a></li>
             </ul>
 
