--- a/chat_toOwner_wu.html
+++ b/chat_toOwner_wu.html
@@ -46,20 +46,20 @@
                 <i class="fa-solid fa-chevron-left nav_turnback"></i>
                 <li class="nav_link"><a href="./index.html">首頁</a></li>
                 <li class="nav_link ">工作類別<i class="fa-solid fa-chevron-down nav_fa-chevron-down"></i>
-                    <div class="nav_workKind_list">
+                     <div class="nav_workKind_list">
                         <ul class="nav_workKind">
-                            <li><a href="">人力</a></li>
-                            <li><a href="">餐飲</a></li>
-                            <li><a href="">門市</a></li>
-                            <li><a href="">辦公</a></li>
-                            <li><a href="">補救</a></li>
+                            <li><a href="./index/indextask.html">人力</a></li>
+                            <li><a href="./index/indextask.html">餐飲</a></li>
+                            <li><a href="./index/indextask.html">門市</a></li>
+                            <li><a href="./index/indextask.html">辦公</a></li>
+                            <li><a href="./index/indextask.html">補救</a></li>
                         </ul>
                         <ul class="nav_workKind">
-                            <li><a href="">活動</a></li>
-                            <li><a href="">銷售</a></li>
-                            <li><a href="">市調</a></li>
-                            <li><a href="">設計</a></li>
-                            <li><a href="">其他</a></li>
+                            <li><a href="./index/indextask.html">活動</a></li>
+                            <li><a href="./index/indextask.html">銷售</a></li>
+                            <li><a href="./index/indextask.html">市調</a></li>
+                            <li><a href="./index/indextask.html">設計</a></li>
+                            <li><a href="./index/indextask.html">其他</a></li>
                         </ul>
                     </div>
 
