--- a/expert_finish_form.html
+++ b/expert_finish_form.html
@@ -96,7 +96,7 @@
 
   <p class="wait">資訊審查中... 需一個工作天,請耐心等候</p>
 
-  <a href="./index/indextask.html" class="sent" onclick="expert_signup()">查看熱門工作</a>
+  <a href="./index/indextask.html" class="sent" >查看熱門工作</a>
 
 
 
@@ -197,11 +197,7 @@
     </div>
   </footer>
   <script src="./js/login_chack.js"></script>
-  <script>
-    function expert_signup() {
-      localStorage.setItem('expert_login', 'in')
-    }
-  </script>
+ 
 </body>
 
 </html>
