--- a/owner_finish_form.html
+++ b/owner_finish_form.html
@@ -96,7 +96,7 @@
 
   <p class="wait">資訊審查中... 需一個工作天,請耐心等候</p>
   
-  <a href="./index/indextask2.html" class="sent" onclick="owner_signup()">尋找接案者</a>
+  <a href="./index/indextask2.html" class="sent" >尋找接案者</a>
 
   
 
@@ -197,11 +197,7 @@
     </div>
   </footer>
   <script src="./js/login_chack.js"></script>
-  <script>
-    function owner_signup() {
-      localStorage.setItem('owner_login', 'in')
-    }
-  </script>
+ 
 </body>
 
 </html>
