--- a/expert_detail_lin.html
+++ b/expert_detail_lin.html
@@ -55,18 +55,18 @@
         <li class="nav_link ">工作類別<i class="fa-solid fa-chevron-down nav_fa-chevron-down"></i>
           <div class="nav_workKind_list">
             <ul class="nav_workKind">
-              <li><a href="">人力</a></li>
-              <li><a href="">餐飲</a></li>
-              <li><a href="">門市</a></li>
-              <li><a href="">辦公</a></li>
-              <li><a href="">補救</a></li>
+              <li><a href="./index/indextask">人力</a></li>
+              <li><a href="./index/indextask">餐飲</a></li>
+              <li><a href="./index/indextask">門市</a></li>
+              <li><a href="./index/indextask">辦公</a></li>
+              <li><a href="./index/indextask">補救</a></li>
             </ul>
             <ul class="nav_workKind">
-              <li><a href="">活動</a></li>
-              <li><a href="">銷售</a></li>
-              <li><a href="">市調</a></li>
-              <li><a href="">設計</a></li>
-              <li><a href="">其他</a></li>
+              <li><a href="./index/indextask">活動</a></li>
+              <li><a href="./index/indextask">銷售</a></li>
+              <li><a href="./index/indextask">市調</a></li>
+              <li><a href="./index/indextask">設計</a></li>
+              <li><a href="./index/indextask">其他</a></li>
             </ul>
           </div>
 
