--- a/owner_pv_form.html
+++ b/owner_pv_form.html
@@ -104,7 +104,7 @@
 
 
 
-  <a href="owner_finish_form.html" class="sent">送出</a>
+  <a href="owner_finish_form.html" class="sent" onclick="owner_signup()">送出</a>
 
 
 
@@ -207,6 +207,11 @@
     </div>
   </footer>
   <script src="./js/login_chack.js"></script>
+  <script>
+    function owner_signup() {
+      localStorage.setItem('owner_login', 'in')
+    }
+  </script>
 </body>
 
 </html>
