--- a/Yating_Job_Posting.html
+++ b/Yating_Job_Posting.html
@@ -19,6 +19,8 @@
     <!--headerfooter的JS,不能刪掉 -->
     <script src="./js/header_footer.js"> </script>
     <!-- 要再增加link的話,請在下方繼續加 -->
+  <link rel="shortcut icon" type="image/x-icon" href="/img/nav_footer/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="/img/nav_footer/favicon.ico">
     <link rel="stylesheet" href="./css/Yating_Job_Posting.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
