--- a/chat_toOwner_wu.html
+++ b/chat_toOwner_wu.html
@@ -19,7 +19,7 @@
     <!--headerfooter的JS,不能刪掉 -->
     <script src="./js/header_footer.js"> </script>
     <!-- 要再增加link的話,請在下方繼續加 -->
-  <link rel="shortcut icon" type="image/x-icon" href="/img/nav_footer/favicon.ico">
+<link rel="shortcut icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="./css/chat.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
