--- a/expert_pv_form.html
+++ b/expert_pv_form.html
@@ -19,7 +19,7 @@
   <!--headerfooter的JS,不能刪掉 -->
   <script src="./js/header_footer.js"> </script>
   <!-- 要再增加link的話,請在下方繼續加 -->
-  <link rel="shortcut icon" type="image/x-icon" href="/img/nav_footer/favicon.ico">
+<link rel="shortcut icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="css/expert_pv_form.css">
 
 
