--- a/owner_S2_form.html
+++ b/owner_S2_form.html
@@ -191,7 +191,7 @@
 
                     </select>
                 </form>
-                <p>開始時間</p>
+                <p>結束時間</p>
                 <form class="start">
                     <i class="fa-solid fa-chevron-down"></i>
                     <select class="stratlist">
